Move MCP into separate maven module (#22043)
* Move MCP into separate maven module

* Fix styling

* Add Tests, upgrade to 0.10 mcp-sdk version

* Fix tests

* revert npm package and related files

---------

Co-authored-by: Chirag Madlani <12962843+chirag-madlani@users.noreply.github.com>